[package]
name = "tesseract-plumbing"
version = "0.11.0"
authors = ["Chris Couzens <ccouzens@gmail.com>"]
edition = "2018"
description = "Safe wrapper of `tesseract-sys`"
homepage = "https://github.com/ccouzens/tesseract-plumbing"
repository = "https://github.com/ccouzens/tesseract-plumbing"
readme = "README.md"
keywords = ["leptonica", "tesseract", "ocr", "image"]
license = "MIT"
[dependencies]
tesseract-sys = { git = "https://github.com/relkondo/tesseract-sys" }
leptonica-plumbing = { git = "https://github.com/relkondo/leptonica-plumbing" }
thiserror = "1.0"

[dev-dependencies]
image = "0.24.7"

[features]
default = ["tesseract_5_2"]
tesseract_5_2 = []
